--- a/main_proyecto.ipynb
+++ b/main_proyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0b956324",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "e61c7dba",
    "metadata": {},
    "outputs": [
@@ -82,9 +82,9 @@
     "            images_train.append(image)\n",
     "            b = \"Leyendo...\" + str(cant_train)\n",
     "            print (b, end=\"\\r\")\n",
-    "            if prevRoot !=root:\n",
+    "            if prevRoot_train !=root:\n",
     "                print(root, cant_train)\n",
-    "                prevRoot=root\n",
+    "                prevRoot_train=root\n",
     "                directories_train.append(root)\n",
     "                dircount_train.append(cant_train)\n",
     "                cant_train=0\n",
@@ -116,9 +116,9 @@
     "            images_test.append(image)\n",
     "            b = \"Leyendo...\" + str(cant_test)\n",
     "            print (b, end=\"\\r\")\n",
-    "            if prevRoot !=root:\n",
+    "            if prevRoot_test !=root:\n",
     "                print(root, cant_test)\n",
-    "                prevRoot=root\n",
+    "                prevRoot_test=root\n",
     "                directories_test.append(root)\n",
     "                dircount_test.append(cant_test)\n",
     "                cant_test=0\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "d4b31564",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "3464e26e",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "dde797db",
    "metadata": {},
    "outputs": [
@@ -275,28 +275,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_1 (Conv2D)           (None, 384, 216, 32)      896       \n",
+      " conv2d (Conv2D)             (None, 384, 216, 32)      896       \n",
       "                                                                 \n",
-      " leaky_re_lu_2 (LeakyReLU)   (None, 384, 216, 32)      0         \n",
+      " leaky_re_lu (LeakyReLU)     (None, 384, 216, 32)      0         \n",
       "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 192, 108, 32)     0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d (MaxPooling2D  (None, 192, 108, 32)     0         \n",
+      " )                                                               \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 192, 108, 32)      0         \n",
+      " dropout (Dropout)           (None, 192, 108, 32)      0         \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 663552)            0         \n",
+      " flatten (Flatten)           (None, 663552)            0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 32)                21233696  \n",
+      " dense (Dense)               (None, 32)                21233696  \n",
       "                                                                 \n",
-      " leaky_re_lu_3 (LeakyReLU)   (None, 32)                0         \n",
+      " leaky_re_lu_1 (LeakyReLU)   (None, 32)                0         \n",
       "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 32)                0         \n",
+      " dropout_1 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 8)                 264       \n",
+      " dense_1 (Dense)             (None, 8)                 264       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 21,234,856\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "7b06ee9c",
    "metadata": {},
    "outputs": [
@@ -351,20 +351,20 @@
     },
     {
      "ename": "ValueError",
-     "evalue": "in user code:\n\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential_1\" is incompatible with the layer: expected shape=(None, 384, 216, 3), found shape=(None, 216, 384, 3)\n",
+     "evalue": "in user code:\n\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential\" is incompatible with the layer: expected shape=(None, 384, 216, 3), found shape=(None, 216, 384, 3)\n",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m sport_train_dropout \u001b[39m=\u001b[39m carne_model\u001b[39m.\u001b[39;49mfit(train_X, train_label, batch_size\u001b[39m=\u001b[39;49mbatch_size,epochs\u001b[39m=\u001b[39;49mepochs,verbose\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,validation_data\u001b[39m=\u001b[39;49m(valid_X, valid_label))\n\u001b[0;32m      3\u001b[0m \u001b[39m# guardamos la red, para reutilizarla en el futuro, sin tener que volver a entrenar\u001b[39;00m\n\u001b[0;32m      4\u001b[0m carne_model\u001b[39m.\u001b[39msave(\u001b[39m\"\u001b[39m\u001b[39mcarnes_mnist.h5py\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m carne_train_dropout \u001b[39m=\u001b[39m carne_model\u001b[39m.\u001b[39;49mfit(train_X, train_label, batch_size\u001b[39m=\u001b[39;49mbatch_size,epochs\u001b[39m=\u001b[39;49mepochs,verbose\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,validation_data\u001b[39m=\u001b[39;49m(valid_X, valid_label))\n\u001b[0;32m      3\u001b[0m \u001b[39m# guardamos la red, para reutilizarla en el futuro, sin tener que volver a entrenar\u001b[39;00m\n\u001b[0;32m      4\u001b[0m carne_model\u001b[39m.\u001b[39msave(\u001b[39m\"\u001b[39m\u001b[39mcarnes_mnist.h5py\u001b[39m\u001b[39m\"\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_filep8djvmm8.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__train_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[39m=\u001b[39m ag__\u001b[39m.\u001b[39mconverted_call(ag__\u001b[39m.\u001b[39mld(step_function), (ag__\u001b[39m.\u001b[39mld(\u001b[39mself\u001b[39m), ag__\u001b[39m.\u001b[39mld(iterator)), \u001b[39mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
-      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential_1\" is incompatible with the layer: expected shape=(None, 384, 216, 3), found shape=(None, 216, 384, 3)\n"
+      "File \u001b[1;32m~\\AppData\\Local\\Temp\\__autograph_generated_filekk4bwnxs.py:15\u001b[0m, in \u001b[0;36mouter_factory.<locals>.inner_factory.<locals>.tf__train_function\u001b[1;34m(iterator)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     14\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m     retval_ \u001b[39m=\u001b[39m ag__\u001b[39m.\u001b[39mconverted_call(ag__\u001b[39m.\u001b[39mld(step_function), (ag__\u001b[39m.\u001b[39mld(\u001b[39mself\u001b[39m), ag__\u001b[39m.\u001b[39mld(iterator)), \u001b[39mNone\u001b[39;00m, fscope)\n\u001b[0;32m     16\u001b[0m \u001b[39mexcept\u001b[39;00m:\n\u001b[0;32m     17\u001b[0m     do_return \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: in user code:\n\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1284, in train_function  *\n        return step_function(self, iterator)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1268, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1249, in run_step  **\n        outputs = model.train_step(data)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\training.py\", line 1050, in train_step\n        y_pred = self(x, training=True)\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\utils\\traceback_utils.py\", line 70, in error_handler\n        raise e.with_traceback(filtered_tb) from None\n    File \"c:\\Users\\vilas\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\engine\\input_spec.py\", line 298, in assert_input_compatibility\n        raise ValueError(\n\n    ValueError: Input 0 of layer \"sequential\" is incompatible with the layer: expected shape=(None, 384, 216, 3), found shape=(None, 216, 384, 3)\n"
      ]
     }
    ],
    "source": [
-    "sport_train_dropout = carne_model.fit(train_X, train_label, batch_size=batch_size,epochs=epochs,verbose=1,validation_data=(valid_X, valid_label))\n",
+    "carne_train_dropout = carne_model.fit(train_X, train_label, batch_size=batch_size,epochs=epochs,verbose=1,validation_data=(valid_X, valid_label))\n",
     "\n",
     "# guardamos la red, para reutilizarla en el futuro, sin tener que volver a entrenar\n",
     "carne_model.save(\"carnes_mnist.h5py\")"
